@@ -53,7 +53,11 @@ sub gather_files {
   for my $filename ( qw( xt/release/kwalitee.t ) ) {
     my $content = $self->fill_in_string(
       ${$self->section_data($filename)},
-      { import_options => \$import_options},
+      {
+        dist => \($self->zilla),
+        plugin => \$self,
+        import_options => \$import_options,
+      },
     );
 
     $self->add_file(
@@ -101,7 +105,7 @@ following file:
 
 __DATA__
 ___[ xt/release/kwalitee.t ]___
-# This test is generated by Dist::Zilla::Plugin::Test::Kwalitee
+# this test was generated with {{ ref($plugin) . ' ' . $plugin->VERSION }}
 use strict;
 use warnings;
 use Test::Kwalitee{{ $import_options }};
